fiz a análise de aumento de horas brutas e percentuais

--- a/Delson_File.ipynb
+++ b/Delson_File.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "[85 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,6 +233,124 @@
     "    'Viewer_ratio':'proporcao_de_espectadores',\n",
     "}, inplace=True)\n",
     "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     ano  mes  variacao_de_horas\n",
+      "51  2020    4        573939027.0\n",
+      "60  2021    1        296474851.0\n",
+      "72  2022    1        290046300.0\n",
+      "50  2020    3        236617937.0\n",
+      "62  2021    3        202072109.0\n",
+      "..   ...  ...                ...\n",
+      "82  2022   11       -189057859.0\n",
+      "61  2021    2       -194212207.0\n",
+      "70  2021   11       -208080469.0\n",
+      "65  2021    6       -344665031.0\n",
+      "0   2016    1                NaN\n",
+      "\n",
+      "[85 rows x 3 columns]\n",
+      "(2020, 4, 573939027.0)\n",
+      "(2021, 6, -344665031.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#maior e menor crescimento de horas assistidas durante os meses\n",
+    "\n",
+    "diferenca = data['horas_assistidas'].diff()\n",
+    "data['variacao_de_horas'] = diferenca\n",
+    "\n",
+    "df = data.sort_values('variacao_de_horas',ascending=False)\n",
+    "# print(df)\n",
+    "df_select = df[['ano','mes','variacao_de_horas']]\n",
+    "print(df_select)\n",
+    "var_max = df.groupby(['ano','mes','variacao_de_horas'])['variacao_de_horas'].sum().idxmax()\n",
+    "var_min = df.groupby(['ano','mes','variacao_de_horas'])['variacao_de_horas'].sum().idxmin()\n",
+    "print(var_max)\n",
+    "print(var_min)\n",
+    "\n",
+    "\n",
+    "#isso daqui foram alguns testes não deve ser considerado\n",
+    "# horas_assis_ant = int(data.loc[(data['ano'] == 2020) & (data['mes'] == 3) , 'horas_assistidas'])\n",
+    "# horas_assis_ant2 = int(data.loc[(data['ano'] == 2021) & (data['mes'] == 5) , 'horas_assistidas'])\n",
+    "# porcentagem_de_crescimento = (var_max[2])/(horas_assis_ant)\n",
+    "# porcentagem_decrescimento = (var_min[2])/(horas_assis_ant2)\n",
+    "# print(f'{porcentagem_de_crescimento:.2%}')\n",
+    "# print(f'{porcentagem_decrescimento:.2%}')\n",
+    "\n",
+    "# # print(df[df['horas_assistidas'] == df['horas_assistidas'].max()])\n",
+    "# # print(df[df['horas_assistidas'] == df['horas_assistidas'].min()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2020, 4, 0.47107117418179945)\n",
+      "(2016, 4, -0.2296737520823291)\n",
+      "\n",
+      "em maio de 2020 temos o maior aumento percentual de horas assistidas\n",
+      "com um aumento de 47.11%\n",
+      "\n",
+      "\n",
+      "em junho de 2016 temos a maior redução  percentual de horas assistidas\n",
+      "com uma redução de -22.97%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Delson Cardoso\\AppData\\Local\\Temp\\ipykernel_16924\\2134922741.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  horas['var_percentual'] = horas['horas_assistidas'].pct_change().fillna(0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#maior e menor crescimento percentual durante os meses\n",
+    "horas  = data[['ano','mes','horas_assistidas']]\n",
+    "horas['var_percentual'] = horas['horas_assistidas'].pct_change().fillna(0)\n",
+    "horas = horas.sort_values('var_percentual',ascending=False)\n",
+    "var_max_porcent = horas.groupby(['ano','mes','var_percentual'])['var_percentual'].sum().idxmax()\n",
+    "var_min_porcent = horas.groupby(['ano','mes','var_percentual'])['var_percentual'].sum().idxmin()\n",
+    "horas\n",
+    "print(var_max_porcent)\n",
+    "print(var_min_porcent)\n",
+    "\n",
+    "print(f'''\n",
+    "em maio de {var_max_porcent[0]} temos o maior aumento percentual de horas assistidas\n",
+    "com um aumento de {var_max_porcent[2]:.2%}\n",
+    "''')\n",
+    "print(f'''\n",
+    "em junho de {var_min_porcent[0]} temos a maior redução  percentual de horas assistidas\n",
+    "com uma redução de {var_min_porcent[2]:.2%}\n",
+    "''')"
    ]
   },
   {
