Consertei os problemas de merging

--- a/Luiz_File.ipynb
+++ b/Luiz_File.ipynb
@@ -701,7 +701,9 @@
   {
    "cell_type": "markdown",
    "id": "f803ff06",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Valores médios por mês e ano"
    ]
@@ -709,7 +711,9 @@
   {
    "cell_type": "markdown",
    "id": "e2dce655",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "0, 11 -> 2016  <br>\n",
     "12, 23 -> 2017 <br>\n",
@@ -727,7 +731,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "bfea18d5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def analisaMedias(horas:list(), visus:list()):\n",
@@ -801,7 +807,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "1c1ae4a5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "horas_assistidas = [ dados for dados in data['horas_assistidas']]\n",
@@ -813,7 +821,9 @@
   {
    "cell_type": "markdown",
    "id": "e143c7ec",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "A variável <b>total_medias</b> corresponde a uma lista com outras 8 listas dentro de si. Cada lista dessas possui 1 determinado ano como valor inicial, 12 valores de médias mensais de horas assistidas por número de espectadores e, por fim, um valor de média anual do total de horas assistidas pelo total de espectadores anuais."
    ]
@@ -822,7 +832,9 @@
    "cell_type": "code",
    "execution_count": 60,
    "id": "f572d9ed",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "maiores = []\n",
@@ -837,7 +849,9 @@
    "cell_type": "code",
    "execution_count": 61,
    "id": "372d25d7",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
