--- a/Delson_File.ipynb
+++ b/Delson_File.ipynb
@@ -286,13 +286,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -740,8 +733,8 @@
     }
    ],
    "source": [
-    "media_transmicoes.sort_values(by= 'Streams',ascending=False)\n",
-    "#Ranking dos meses com maior média de transmissões\n"
+    "#Ranking dos meses com maior média de transmissões\n",
+    "media_transmicoes.sort_values(by= 'Streams',ascending=False)\n"
    ]
   },
   {
